src/test/ui/issues/issue-44239.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/issue-44239.rs:6:26
   |
LL |     let n = 0;
   |         - help: consider using `const` instead of `let`
...
LL |         const N: usize = n;
   |                          ^ non-constant value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0435`.
