src/test/ui/issues/issue-44239.rs
fn main() {
    let n = 0;

    struct Foo;
    impl Foo {
        const N: usize = n;
        //~^ ERROR attempt to use a non-constant value
    }
}
